# GlslTest

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  shader-schema.json  test-shader-schema.json
.github/workflows/: build.yml  release.yml
cmake/: FindGLFW3.cmake
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: gl.h
libs/glad/src/: gl.c
shaders/box_blur/downscale/: frag.glsl  shader.json
shaders/box_blur/pass/: frag.glsl  frag_h.glsl  frag_v.glsl
shaders/box_blur/pass1-1/: shader.json
shaders/box_blur/pass1-2/: shader.json
shaders/box_blur/pass2/: shader.json
shaders/box_blur/pass2-1/: shader.json
shaders/box_blur/pass2-2/: shader.json
shaders/box_blur/pass4/: shader.json
shaders/box_blur/result/: shader.json
shaders/rainbow_wave/result/: frag.glsl  shader.json
shaders/test/: frag.glsl  shader.json
shaders/test/background/: frag.glsl  shader.json  vert.glsl
shaders/test/mask/: frag.glsl  shader.json
src/: main.cpp  stb_image.h  stb_image_write.h  util.cpp  util.h
src/glo/: Framebuffer.cpp  Framebuffer.h  Shader.cpp  Shader.h  ShaderConfig.cpp  ShaderConfig.h  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h  VertexArrayObject.cpp  VertexArrayObject.h
